# Stockio

./: .env.example  .gitignore  =0.2.31  CLAUDE.md  README.md  pyproject.toml  requirements.txt  setup.py
.claude/: history.jsonl  settings.json
.claude/memory/: MEMORY.md  feedback_deploy_process.md  project_stockio_rebuild.md  project_strategy_competition_next.md  user_trading_experience.md
.claude/sessions/4f0c783e-374e-4e66-ad09-6c4a63dc6863/subagents/: agent-a101a124e48936e9b.jsonl  agent-a101a124e48936e9b.meta.json  agent-a15ccb64e0ead17b8.jsonl  agent-a15ccb64e0ead17b8.meta.json  agent-a22e842aa2d6f061e.jsonl  agent-a22e842aa2d6f061e.meta.json  agent-a23a13ff3c0c14ea7.jsonl  (+22 more)
config/: instruments.toml  markets.toml  settings.toml
deploy/: setup.sh  stockio-bot.service  stockio-web.service  update.sh
scripts/: backfill_training_data.py  sweep_label_configs.py
scripts/deploy/: logrotate.conf  setup.sh  stockio-web.service  stockio.service  update.sh
src/stockio/: __init__.py  backtest.py  bot.py  cli.py  config.py  db.py  engine.py  executor.py  main.py  market_data.py  market_discovery.py  portfolio.py  sentiment.py  strategy.py  webapp.py
src/stockio/broker/: __init__.py  base.py  models.py  oanda.py  yahoo.py
src/stockio/strategy/: calendar.py  correlation.py  indicators.py  llm_advisor.py  notifier.py  optimizer.py  scorer.py  sentiment.py  strategies.py
src/stockio/templates/: dashboard.html
src/stockio/web/: app.py  bot_manager.py
tests/: test_executor.py  test_market_data.py  test_portfolio.py  test_strategy.py  test_webapp.py
(+41 files in other folders)
